<resources>
    <string name="app_name">Wechat</string>

    <!--    登录界面-->
    <string name="login_account">&#160;&#160;请输入账号</string>
    <string name="login_paw">&#160;&#160;请输入密码</string>
    <string name="login_btn">登录</string>
    <string name="login_reg_btn">注册</string>

    <!--    注册界面-->
    <string name="reg_account">&#160;&#160;请输入账号(至少6个数字)</string>
    <string name="reg_paw">&#160;&#160;请输入密码</string>
    <string name="reg_repaw">&#160;&#160;请再次输入密码</string>
    <string name="reg_sex_tv">请选择性别: </string>
    <string name="reg_sex_man">男</string>
    <string name="reg_sex_woman">女</string>
    <string name="reg_city_tv">请选择城市: </string>
    <string name="reg_birth_tv">请选择生日: </string>
    <string name="reg_register">注册</string>
    <string name="reg_cancel">取消</string>
    <string name="reg_check_box">我已阅读 <p>《网络安全协议》</p></string>

    <!--    主界面-->
    <string name="main_bottom_msg">微信</string>
    <string name="main_bottom_contact">通讯录</string>
    <string name="main_bottom_find">发现</string>
    <string name="main_bottom_mine">我</string>

<!--    信息界面-->
    <string name="message_input_hint">请输入信息</string>
    <string name="message_send">发送</string>


<!--    登陆界面-->
    <string name="login_error" translatable="false">用户名或密码错误</string>
</resources>
